wrong decoding of gtp.target identification
This issue was migrated from bug 3974 in our old bug tracker.
Original bug information:
Reporter: Martin Zigo
Status: RESOLVED FIXED
Product: Wireshark
Component: GTK+ UI
OS: Windows XP
Platform: x86
Version: 1.2.6
Attachments:
gtp_malformed_packet.pcap: Target Identification IE is wrongly decoded
: picture
SRNS_reco_fail_Alc-Ericsson.zip: additional traces
29060_CR0913R1_Rel-11_C4-121740.doc: 29.060-CR913 eNodeB Identification