Target Identification shall be coded as TLV IE where value is coded as TargetRNC-ID. Proposed fix to https://bugs.wireshark.org/bugzilla/show_bug.cgi?id=3974 (The enclosed trace dioes not decode properly but may be wrongly encoded).

svn path=/trunk/; revision=29816